ajout d'une strategie >70